syntax = "proto3";

message Level {
    map<uint64, string> coord_index_to_house_id = 1;
    uint32 round = 2;
}
